<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="XtsHardwareInfo" Id="{2a61f518-d15a-4017-b8ec-dbbbd463c123}">
    <Declaration><![CDATA[TYPE XtsHardwareInfo :
STRUCT
	NoOfParts: UDINT;
	NoOfTracks : UDINT;
	NoOfModules : ARRAY[1..10] OF UDINT;
	HWState : XtsHardwareState;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>